# fraudflow

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
api/: main.py  schemas.py
dashboard/: app.py
src/: data_processing.py  drift.py  predict.py  train.py
tests/: conftest.py  test_api.py  test_data_processing.py  test_drift.py  test_predict.py  test_train.py
